--- a/class1/change_content.html
+++ b/class1/change_content.html
@@ -7,6 +7,7 @@
 		document.write("line2");
 		console.log("Hello!");
 		*/
+		/* this is a comment*/
 		document.getElementById("info").innerHTML = "XYZ";
 	</script>
 	<body>
