--- a/class1/change_style.html
+++ b/class1/change_style.html
@@ -6,6 +6,7 @@
 	<body>
 		<img id='myImage' src='' style='width:100px'>
 		/*this is a comment*/
+		/*this is a second comment*/
 		<button onclick="document.getElementById('myImage').src = 'pic1.jpg'";>Picture1</button>
 		<button onclick="document.getElementById('myImage').src = 'pic2.jpg'";>Picture2</button>
 		<button onclick="document.getElementById('myImage').style = 'width:500px'";>Zoom</button>
