executing examples of pdf

--- a/class2/test.html
+++ b/class2/test.html
@@ -11,6 +11,21 @@ enable JavaScript in your browser.</h2>
 <script>
 const today = new Date();
 document.write(`Today is ${today.toDateString()}.`);
+document.write("<br>");
+document.write(`Copyright \u00A9 ${today.getFullYear()}`);
+document.write("<br>");
+document.write("<br>");
+var x1 = 16 + "Apple";
+var x2 = "Apple" + 16;
+var x3 = 16 + 4 + "Apple";
+var x4 = "Apple" + 16 + 4;
+document.write(x1);
+document.write("<br>");
+document.write(x2);
+document.write("<br>");
+document.write(x3);
+document.write("<br>");
+document.write(x4);
 </script>
 <noscript>
 Today is the first day of the rest of your life.
