--- a/class2/test_miles.html
+++ b/class2/test_miles.html
@@ -1,33 +1,35 @@
 
 <html>
 <head>
-	<script>
-		/*function myFunction() {
-			var num1 = document.getElementById("num1").value;
-			//alert(num1);
-			var num2 = document.getElementById("num2").value;
-			//alert(num2);
-			result = parseInt(num1) + parseInt(num2);
-			document.getElementById("result").innerHTML =  result;
-		}*/
-		const miles = parseFloat(prompt("Enter miles drive"));
+	
+	
+</head>
+<body>
+<h1>MPG Application</h1>
+
+<script>
+		"use strict";
+		const miles = parseFloat(prompt("Enter miles driven"));
 		//alert(miles); 
 		const gallons = parseFloat(prompt("Enter gallons of gas used"));
 		//alert(gallons); 
-		var result = (miles/gallons);
-
+		const mpg = parseFloat(miles/gallons);
+		
+		const html = `<p>Miles: ${miles}</p><p>Gallons: ${gallons}</p><p>MPG: ${mpg.toFixed(2)}</p`
+		document.write(html);
+		
+		/*
+		document.write("<br>");
 		document.write(`<h1>The Miles Per Gallon Calculator</h1>`);
 		
 		document.write("<br>");
 		document.write(`<p>Miles:   = ${miles}</p>`);
 		document.write(`<p>Gallons: = ${gallons}</p>`);
-		document.write(`<p>MPG:     = ${result}</p>`);
+		document.write(`<p>MPG:     = ${mpg}</p>`);
 		document.write("<br>");
+		*/
 		
 	</script>
-</head>
-<body>
-
 
 </body>
 </html>
